examples/out/service.yaml
apiVersion: v1
kind: Service
spec:
  selector:
    app: nginx
  ports:
  - targetPort: 80
    port: 80
  type: NodePort
metadata:
  annotations: {}
  name: nginx
  labels:
    app: nginx
